# TomoSect

./: .cmake-format.py  .gitignore  CMakeLists.txt  README.md  library.h
benchmarks/: CMakeLists.txt  bench_aabb_intersection.cpp  bench_copyInts.cpp  bench_curved_rect_intersection.cpp  bench_main.cpp  bench_ray_fixture.hpp  bench_ray_generation.cpp  bench_rect_intersection.cpp
cmake/: FindSphinx.cmake  code-coverage.cmake  compiler-options.cmake  cuda-standard.cmake  cxx-standard.cmake  doxygen.cmake  formatting.cmake  sanitizers.cmake  tools.cmake  utilities.cmake
include/TomoSect/: approx.hpp  custom_point.hpp  geometry.hpp  intersection.hpp  point.hpp  vector.hpp
scripts/: intersection_cylinder.py
tests/: CMakeLists.txt  test_custom_point.cpp  test_geometry.cpp  test_intersection.cpp  test_main.cpp  test_point.cpp  test_vector.cpp
